tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  annotations:
    prometheus.io/scrape: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0-jdk8-openjdk
        ports:
        - containerPort: 8080
