httpd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
spec:
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
