tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  selector:
    app: tomcat
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30088
  type: NodePort
